--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,9 +81,9 @@ img, audio, video, canvas { max-width: 100%; }
     margin-right: auto;
 }
 
-
-
-
+.button {
+    width: 8em
+}
 
 /* =============================================================
     TABLES
