--- a/src/styles.scss
+++ b/src/styles.scss
@@ -129,7 +129,7 @@ table {
 /*  Aligns cell text to the top of each cell. */
 .table td,
 %table td {
-   vertical-align: top;
+   vertical-align: middle;
 }
 
 /*  Removes the border-top from the first row. */
