--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import '../node_modules/material-design-icons/iconfont/material-icons.css';
+
 /* You can add global styles to this file, and also import other style files */
 html, body {
   margin: 0;
